[gd_scene load_steps=11 format=3 uid="uid://c6uedr2baxna5"]

[ext_resource type="Script" path="res://scripts/level_base.gd" id="1_wtejs"]
[ext_resource type="Script" path="res://scripts/csg_box_3d.gd" id="2_qog1a"]
[ext_resource type="Texture2D" uid="uid://hplgbvyrej4n" path="res://textures/moon_tile_2.png" id="3_digtm"]
[ext_resource type="PackedScene" uid="uid://chviiwgpxoqs8" path="res://scenes/snaut_2.tscn" id="4_qselj"]
[ext_resource type="Environment" uid="uid://8ejtpobw34d6" path="res://mats/base_env.tres" id="5_opfjp"]
[ext_resource type="PackedScene" uid="uid://c6yjnto64sfb3" path="res://scenes/jlxyr_of_umygrox.tscn" id="6_petig"]
[ext_resource type="PackedScene" uid="uid://7hbs1525kc22" path="res://scenes/scepter_1.tscn" id="7_nkofy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7msg3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7suwj"]
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 0.776471, 1)
uv1_scale = Vector3(10, 10, 10)
grow_amount = 12.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v8fm8"]
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.752941, 1, 0.882353, 1)
uv1_scale = Vector3(10, 10, 10)
grow_amount = 12.0

[node name="levelBase" type="Node3D"]
script = ExtResource("1_wtejs")

[node name="map" type="Node3D" parent="."]

[node name="ground" type="CSGBox3D" parent="map" groups=["Ground"]]
use_collision = true
size = Vector3(250, 1, 250)
script = ExtResource("2_qog1a")
texture = ExtResource("3_digtm")
curvature = 0.02
tile_factor = 100.0

[node name="player" type="Node3D" parent="."]

[node name="snaut2" parent="player" instance=ExtResource("4_qselj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Skeleton3D" parent="player/snaut2/meshy_snaut/Armature" index="0"]
bones/0/position = Vector3(1.52898, -1.02426, -68.7715)
bones/0/rotation = Quaternion(-0.734993, -0.00114879, -0.0285841, 0.677471)
bones/1/rotation = Quaternion(0.0482027, -0.00739837, -0.00072472, 0.99881)
bones/2/rotation = Quaternion(0.0518688, -0.00679454, 0.0218252, 0.998392)
bones/3/rotation = Quaternion(-0.0360961, -0.0111618, -0.00376778, 0.999279)
bones/4/rotation = Quaternion(0.0492914, -0.0684678, -0.0146632, 0.996327)
bones/5/rotation = Quaternion(0.060566, -0.0735568, 0.0311969, 0.994961)
bones/7/rotation = Quaternion(0.605656, 0.406364, -0.518675, 0.446124)
bones/8/rotation = Quaternion(0.5325, 0.0249137, 0.04903, 0.844642)
bones/9/rotation = Quaternion(-0.00631999, 0.0648821, 0.0890803, 0.993889)
bones/10/rotation = Quaternion(-0.0184514, 0.286863, -0.00733892, 0.957766)
bones/15/rotation = Quaternion(0.0436338, 0.0214158, 0.0172862, 0.998668)
bones/16/rotation = Quaternion(0.102555, -0.000363311, 0.00709325, 0.994702)
bones/17/rotation = Quaternion(0.0732911, 0.0043211, 0.0627293, 0.995327)
bones/19/rotation = Quaternion(0.619781, -0.398456, 0.497087, 0.458267)
bones/20/rotation = Quaternion(0.532322, -0.0352144, -0.0165877, 0.845647)
bones/21/rotation = Quaternion(-0.022724, -0.121549, -0.135407, 0.983044)
bones/22/rotation = Quaternion(0.000397486, -0.220871, 0.00334187, 0.975297)
bones/27/rotation = Quaternion(0.100656, -0.0115885, -0.0766325, 0.991898)
bones/28/rotation = Quaternion(0.148676, -0.000544329, 0.0228264, 0.988622)
bones/29/rotation = Quaternion(0.116863, -0.0115994, -0.0773825, 0.990061)
bones/31/rotation = Quaternion(0.0939318, 0.020714, 0.993137, -0.0665344)
bones/32/rotation = Quaternion(-0.227426, 0.0367797, 0.0630571, 0.971056)
bones/33/rotation = Quaternion(0.573204, 0.0361905, -0.0315212, 0.818006)
bones/36/rotation = Quaternion(-0.0489204, 0.0247237, 0.998116, -0.0275533)
bones/37/rotation = Quaternion(-0.168448, -0.0476496, -0.0629515, 0.982544)
bones/38/rotation = Quaternion(0.520784, -0.0833835, 0.00589131, 0.849586)

[node name="headAttachment3D" parent="player/snaut2/meshy_snaut/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.953199, -0.057084, -0.296906, 0.301606, 0.248087, 0.92059, 0.0211073, -0.967055, 0.253693, 2.92023, 4.24718, -134.475)

[node name="LhandAttachment3D" parent="player/snaut2/meshy_snaut/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.827671, 0.142343, -0.542862, -0.56109, 0.189558, -0.805758, -0.0117899, 0.971497, 0.236759, 34.8898, 7.38406, -77.0563)

[node name="RhandAttachment3D" parent="player/snaut2/meshy_snaut/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.826633, -0.137961, 0.545568, 0.562741, 0.201088, -0.801802, 0.000910155, 0.969809, 0.243862, -30.9241, 7.14299, -78.1725)

[node name="BoneAttachment3D" parent="player/snaut2/meshy_snaut/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.999811, 0.0105056, -0.0163787, 0.0158743, 0.0464246, 0.998796, 0.0112533, -0.998866, 0.0462491, 2.55926, 0.202465, -105.759)

[node name="Camera3D" parent="player/snaut2/CameraPoint/SpringArm3D" index="0"]
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_opfjp")

[node name="restZone" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="restZone"]
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(50, 1, 50)
material = SubResource("StandardMaterial3D_7msg3")

[node name="dropBox" type="Node3D" parent="restZone"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.09458, 0)

[node name="orbitPoint" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="CSGSphere3D" type="CSGSphere3D" parent="orbitPoint"]
transform = Transform3D(1, 0, 0, 0, 0.953806, 0.300423, 0, -0.300423, 0.953806, 0, 0, 616.756)
radius = 100.0
material = SubResource("StandardMaterial3D_7suwj")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="orbitPoint/CSGSphere3D"]
transform = Transform3D(1, 0, 0, 0, 0.968994, -0.247084, 0, 0.247084, 0.968994, 0, 131.919, -319.423)
light_color = Color(1, 1, 0.866667, 1)
light_energy = 1.1

[node name="CSGSphere3D2" type="CSGSphere3D" parent="orbitPoint"]
transform = Transform3D(1, 0, 0, 0, 0.953806, 0.300423, 0, -0.300423, 0.953806, 0, 0, -825.652)
radius = 100.0
material = SubResource("StandardMaterial3D_v8fm8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="orbitPoint/CSGSphere3D2"]
transform = Transform3D(1, 0, 0, 0, -0.932109, 0.362178, 0, -0.362178, -0.932109, 0, -106.258, 304.917)
light_color = Color(0.666667, 1, 1, 1)
light_energy = 1.2

[node name="npc" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.5, 5.48)

[node name="Jlxyr_of_Umygrox" parent="npc" instance=ExtResource("6_petig")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="npc/Jlxyr_of_Umygrox/alien1/Armature" index="0"]
bones/0/position = Vector3(-0.00453094, -0.350888, -31.7331)
bones/0/rotation = Quaternion(-0.503729, -0.51947, 0.521983, 0.4516)
bones/1/rotation = Quaternion(0.0247944, 0.0107907, 0.0484653, 0.998459)
bones/2/rotation = Quaternion(0.0163362, -1.74426e-05, -0.0112083, 0.999804)
bones/3/rotation = Quaternion(0.0163735, 0.000140497, -0.0109843, 0.999806)
bones/4/rotation = Quaternion(0.0137994, -0.00463127, -0.142745, 0.989653)
bones/5/rotation = Quaternion(0.0138415, 0.00462205, 0.0527494, 0.998501)
bones/7/rotation = Quaternion(-0.105462, -0.515712, 0.848831, -0.0490424)
bones/8/rotation = Quaternion(0.490851, 0.149036, 0.0405551, 0.857443)
bones/9/rotation = Quaternion(0.0118683, -0.399171, 0.0189716, 0.916603)
bones/10/rotation = Quaternion(0.0535956, 0.293599, 0.0239426, 0.954125)
bones/11/rotation = Quaternion(0.121048, 0.0435365, 0.270708, 0.954028)
bones/12/rotation = Quaternion(-0.0280987, 0.0798747, -0.321588, 0.943086)
bones/13/rotation = Quaternion(-0.123124, -0.0718458, 0.120561, 0.982417)
bones/15/rotation = Quaternion(0.0533202, 0.0104485, 0.048945, 0.997323)
bones/16/rotation = Quaternion(0.14981, 0.00036026, -0.0464528, 0.987623)
bones/17/rotation = Quaternion(0.0694271, 0.00521981, 0.0789963, 0.994441)
bones/19/rotation = Quaternion(0.863638, 0.0329698, -0.088603, 0.495168)
bones/20/rotation = Quaternion(0.403083, -0.251021, -0.0818974, 0.876245)
bones/21/rotation = Quaternion(0.0339462, 0.394163, -0.0550963, 0.916759)
bones/22/rotation = Quaternion(0.0594668, -0.403155, 0.0181265, 0.913018)
bones/23/position = Vector3(0.623041, 1.21889, 8.49344e-07)
bones/23/rotation = Quaternion(0.130792, -0.0388242, -0.254435, 0.957418)
bones/24/position = Vector3(0.0629356, 1.09332, -2.75226e-07)
bones/24/rotation = Quaternion(-0.0194732, -0.0594649, 0.406562, 0.911478)
bones/25/rotation = Quaternion(-0.164188, 0.0474229, -0.34708, 0.922133)
bones/27/position = Vector3(-9.70199e-07, 2.30057, -1.7969e-06)
bones/27/rotation = Quaternion(0.055593, -0.00574379, -0.0608899, 0.996579)
bones/28/position = Vector3(-0.0838137, 1.16104, -3.67601e-07)
bones/28/rotation = Quaternion(0.151237, 0.0003022, 0.0764932, 0.985533)
bones/29/rotation = Quaternion(0.0703743, -0.00901724, -0.0959625, 0.992853)
bones/31/rotation = Quaternion(0.131462, -0.0646984, 0.985889, -0.0809664)
bones/32/rotation = Quaternion(-0.0503862, -0.0160749, -0.126938, 0.9905)
bones/33/rotation = Quaternion(0.271781, -0.714086, 0.341778, 0.547179)
bones/34/rotation = Quaternion(0.246515, -0.0855929, 0.0126198, 0.965269)
bones/36/rotation = Quaternion(-0.0889161, -0.0310341, 0.995555, -0.00060181)
bones/37/rotation = Quaternion(0.0407039, 0.0874181, -0.0924995, 0.991032)
bones/38/rotation = Quaternion(0.394715, -0.529106, 0.276027, 0.69861)
bones/39/rotation = Quaternion(0.268175, 0.0876938, -0.0105724, 0.959312)

[node name="scepter" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -97.4549, 0)

[node name="Scepter_1" parent="scepter" instance=ExtResource("7_nkofy")]

[editable path="player/snaut2"]
[editable path="player/snaut2/meshy_snaut"]
[editable path="npc/Jlxyr_of_Umygrox"]
[editable path="npc/Jlxyr_of_Umygrox/alien1"]
